--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,9 +10,10 @@
     tools:context=".DetailActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/detailTitle"
+        android:textAlignment="center"
         android:text="Title"
         android:layout_marginTop="14dp"
         android:textSize="24sp"
